[package]
name = "avl_drevo"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/main.rs"

[profile.dev]
debug = true

# Source - https://stackoverflow.com/a/37017052
# Posted by Manoel Stilpen, modified by community. See post 'Timeline' for change history
# Retrieved 2026-05-10, License - CC BY-SA 4.0

[dependencies]
rand = "0.8"
